# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

add_subdirectory(Foundation)
add_subdirectory(InputSample)
add_subdirectory(Utilities)
add_subdirectory(ActionType)
add_subdirectory(Descriptors)
add_subdirectory(ActionTypeDefinitions)
add_subdirectory(CARL)
